--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "element-ui": "2.9.1",
     "lodash": "4.17.15",
+    "sass-loader": "^7.3.1",
+    "sass-resources-loader": "^2.1.0",
     "vue": "^2.5.2",
     "vue-codemirror": "^4.0.6",
     "vuedraggable": "2.23.0"
@@ -45,6 +47,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
