--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "element-ui": "2.9.1",
     "lodash": "4.17.15",
+    "qs": "^6.9.4",
     "sass-loader": "^7.3.1",
     "sass-resources-loader": "^2.1.0",
     "vue": "^2.5.2",
